--- a/index.html
+++ b/index.html
@@ -1,31 +1,27 @@
 <!doctype html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>FoodFlow - Smart Food Processing & Waste Minimization Dashboard</title>
+    <meta name="description" content="Track food processing batches, calculate losses automatically, receive alerts, and analyze data to reduce waste. SaaS dashboard for food processing optimization." />
+    <meta name="author" content="FoodFlow" />
+    <meta name="keywords" content="food processing, waste minimization, batch tracking, loss calculation, food industry, SaaS, analytics" />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>FoodFlow - Smart Food Processing & Waste Minimization Dashboard</title>
-  <meta name="description"
-    content="Track food processing batches, calculate losses automatically, receive alerts, and analyze data to reduce waste. SaaS dashboard for food processing optimization." />
-  <meta name="author" content="FoodFlow" />
-  <meta name="keywords"
-    content="food processing, waste minimization, batch tracking, loss calculation, food industry, SaaS, analytics" />
+    <meta property="og:title" content="FoodFlow - Smart Food Processing Dashboard" />
+    <meta property="og:description" content="Track batches, minimize waste, and optimize your food processing operations with real-time analytics." />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
-  <meta property="og:title" content="FoodFlow - Smart Food Processing Dashboard" />
-  <meta property="og:description"
-    content="Track batches, minimize waste, and optimize your food processing operations with real-time analytics." />
-  <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@FoodFlow" />
+    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    
+    <link rel="canonical" href="https://foodflow.app" />
+  </head>
 
-  <meta name="twitter:card" content="summary_large_image" />
-
-
-
-  <link rel="canonical" href="https://foodflow.app" />
-</head>
-
-<body>
-  <div id="root"></div>
-  <script type="module" src="/src/main.tsx"></script>
-</body>
-
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
